# nix-build-rs

./: Cargo.toml  LICENSE-MIT
examples/: hello.rs
src/: config.rs  lib.rs
